--- a/styles.css
+++ b/styles.css
@@ -240,8 +240,17 @@ a {
 }
 .plans .btn {
   display: block;
-  width: fit-content;
-  margin: 0 auto;
+  margin: 0 auto 16px;
+  width: 200px;
+  text-align: center;
+}
+.plans.grid.cards .card .btn {
+  margin-top: 0;
+}
+div.plans.grid.cards > article:nth-child(1) > a:nth-child(5),
+div.plans.grid.cards > article:nth-child(2) > a:nth-child(5),
+div.plans.grid.cards > article:nth-child(3) > a:nth-child(4) {
+  margin-top: auto;
 }
 @media (max-width: 900px) {
   .hero-grid {
