--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ body {
     sans-serif;
   line-height: 1.6;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 a {
   color: inherit;
   text-decoration: none;
