--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@
   --brand-2: #34d399;
   --brand-3: #0f3ea3;
   --stroke: #e2e8f0;
-  --box-shadow-style-default: 0 4px 6px -1px #0f3ea31a, 0 2px 4px -2px #0f3ea31a;
+  --box-shadow-style-default:
+    0 4px 6px -1px #0f3ea31a, 0 2px 4px -2px #0f3ea31a;
 }
 * {
   box-sizing: border-box;
@@ -20,7 +21,14 @@ body {
   padding: 0;
   background: var(--bg);
   color: var(--text);
-  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Arial,
+  font-family:
+    Inter,
+    system-ui,
+    -apple-system,
+    Segoe UI,
+    Roboto,
+    Ubuntu,
+    Arial,
     sans-serif;
   line-height: 1.6;
 }
@@ -260,6 +268,48 @@ div.plans.grid.cards > article:nth-child(2) > a:nth-child(5),
 div.plans.grid.cards > article:nth-child(3) > a:nth-child(4) {
   margin-top: auto;
 }
+
+.contact-form {
+  width: 100%;
+  max-width: 600px;
+}
+
+.contact-form .form-group input {
+  width: 100%;
+  height: 32px;
+  border-radius: 8px;
+  margin-bottom: 24px;
+  padding: 0 16px;
+  border: none;
+  color: var(--text);
+  font-size: 16px;
+}
+
+.contact-form .form-group input:focus-visible {
+  outline: none;
+  border: 2px solid var(--text);
+}
+
+/** Início - Animações */
+
+.pulse-element {
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/** Fim -    Animações */
+
 @media (max-width: 1000px) {
   .hero-grid {
     grid-template-columns: 1fr;
@@ -271,8 +321,10 @@ div.plans.grid.cards > article:nth-child(3) > a:nth-child(4) {
     grid-template-columns: 1fr;
   }
   .cta-band-inner {
-    flex-direction: column;
     align-items: flex-start;
+  }
+  .cta-band-inner.subscription-form {
+    align-items: center;
   }
   .menu {
     display: none;
